Revert "functional workflow if you really like it :shrug:"
This reverts commit 6c568a963dba999af51fc577be340cbbd727c8d2.